make ListBlog response message list of blogs instead of stream
