# blog/blogpb/blog.swagger.json
@@ -46,9 +46,9 @@
         "operationId": "ListBlog",
         "responses": {
           "200": {
-            "description": "A successful response.(streaming responses)",
+            "description": "A successful response.",
             "schema": {
-              "$ref": "#/x-stream-definitions/blogListBlogResponse"
+              "$ref": "#/definitions/blogListBlogResponse"
             }
           }
         },
@@ -174,7 +174,10 @@
       "type": "object",
       "properties": {
         "blog": {
-          "$ref": "#/definitions/blogBlog"
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/blogBlog"
+          }
         }
       }
     },
@@ -193,57 +196,6 @@
           "$ref": "#/definitions/blogBlog"
         }
       }
-    },
-    "protobufAny": {
-      "type": "object",
-      "properties": {
-        "type_url": {
-          "type": "string"
-        },
-        "value": {
-          "type": "string",
-          "format": "byte"
-        }
-      }
-    },
-    "runtimeStreamError": {
-      "type": "object",
-      "properties": {
-        "grpc_code": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "http_code": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "message": {
-          "type": "string"
-        },
-        "http_status": {
-          "type": "string"
-        },
-        "details": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/protobufAny"
-          }
-        }
-      }
-    }
-  },
-  "x-stream-definitions": {
-    "blogListBlogResponse": {
-      "type": "object",
-      "properties": {
-        "result": {
-          "$ref": "#/definitions/blogListBlogResponse"
-        },
-        "error": {
-          "$ref": "#/definitions/runtimeStreamError"
-        }
-      },
-      "title": "Stream result of blogListBlogResponse"
     }
   }
 }
